--- a/public/css/app.css
+++ b/public/css/app.css
@@ -67,7 +67,7 @@ section {
 body {
   margin: 0;
   font-family: "Nunito", sans-serif;
-  font-size: 0.9rem;
+  font-size: 1rem;
   font-weight: 400;
   line-height: 1.6;
   color: #212529;
@@ -176,8 +176,9 @@ a {
 }
 
 a:hover {
-  color: #1d68a7;
+  color: #0056b3;
   text-decoration: underline;
+  
 }
 
 a:not([href]) {
@@ -2706,7 +2707,7 @@ fieldset:disabled a.btn {
 }
 
 .btn_,
-.btn-primary-grad {
+.btn-primary--grad {
   display: block;
   /* width: 265px; */
   width: 256px;
@@ -3161,14 +3162,14 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-info {
-  color: #6cb2eb;
-  border-color: #6cb2eb;
+  color: #17a2b8;
+  border-color: #17a2b8;
 }
 
 .btn-outline-info:hover {
-  color: #212529;
-  background-color: #6cb2eb;
-  border-color: #6cb2eb;
+  color: white;
+  border-color: #17a2b8;
+  background-color: #17a2b8;
 }
 
 .btn-outline-info:focus,
@@ -5025,7 +5026,7 @@ input[type=button].btn-block {
   display: flex;
   flex-direction: column;
   min-width: 0;
-  word-wrap: break-word;
+  overflow-wrap: break-word;
   background-color: #fff;
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, 0.125);
@@ -11114,6 +11115,96 @@ a.text-dark:focus {
   display: none;
 }
 
+.slick-slider {
+  position: relative;
+  display: block;
+  box-sizing: border-box;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  touch-action: pan-y;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.slick-list {
+  position: relative;
+  overflow: hidden;
+  display: block;
+  margin: 0;
+  padding: 0;
+}
+
+.slick-list:focus {
+  outline: none;
+}
+
+.slick-list.dragging {
+  cursor: pointer;
+  cursor: hand;
+}
+
+.slick-slider .slick-track,
+.slick-slider .slick-list {
+  transform: translate3d(0, 0, 0);
+}
+
+.slick-dotted.slick-slider {
+  margin-bottom: 30px;
+}
+
+.slick-dots {
+  position: absolute;
+  bottom: -25px;
+  list-style: none;
+  display: block;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+}
+
+.slick-dots li {
+  position: relative;
+  display: inline-block;
+  height: 20px;
+  width: 20px;
+  margin: 0 5px;
+  padding: 0;
+  cursor: pointer;
+}
+
+.slick-dots li button {
+  border: 0;
+  background: transparent;
+  display: block;
+  height: 20px;
+  width: 20px;
+  outline: none;
+  line-height: 0px;
+  font-size: 0px;
+  color: transparent;
+  padding: 5px;
+  cursor: pointer;
+}
+
+.slick-dots li button:hover, .slick-dots li button:focus {
+  outline: none;
+}
+
+.slick-dots li button:hover:before, .slick-dots li button:focus:before {
+  opacity: 1;
+}
+
+
+
+.slick-dots li.slick-active button:before {
+  color: black;
+  opacity: 0.75;
+}
+
+
 
 .adjust-box {
   position: relative;
@@ -11302,54 +11393,151 @@ a.text-dark:focus {
   border-style: none;
 }
 
+/* オススメ情報 */
+
+
+/* 人気順から探す */
+.scrollable-list {
+  overflow-x: scroll;
+  -webkit-overflow-scrolling: touch;
+  white-space: nowrap;
+}
+
+.scrollable-list::-webkit-scrollbar {
+  display: none;
+}
+
+ul.ib-list {
+  font-size: 0;
+}
+
+ul.ib-list li {
+  font-size: medium;
+}
+
+.card--circle {
+  width: 224px;
+}
+
+.hov--default {
+  color: #000;
+}
+
+.line-1 {
+  display: -webkit-box;
+  overflow: hidden;
+  white-space: normal;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+}
+
+.card-img-top--list {
+  min-height: 160px;
+  max-height: 160px;
+}
+
+.card-body--narrow {
+  padding: .75rem;
+}
+
+.btn-outline-blue {
+  border-color: #2292a4;
+  color: #2292a4;
+}
+
+.btn-sm--expand {
+  margin-bottom: 12px;
+  line-height: 1.25;
+}
+
+.card i {
+  font-size: 16px;
+  position: relative;
+  display: flex;
+  width: auto;
+  height: 1.5rem;
+  
+}
+
+.card i p {
+  color: black;
+  margin-left: .75rem;
+  font-weight: 400 !important;
+  
+} 
+
+.card-text--ellipsis {
+  display: -webkit-box;
+  overflow: hidden;
+  white-space: normal;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+}
+
+.card-text--ellipsis_1 {
+  display: -webkit-box;
+  overflow: hidden;
+  white-space: normal;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+}
+
+.text-black-20 {
+  color: rgba(0, 0, 0, 0.24) !important;
+}
+
+.card-bottommeta {
+  position: absolute;
+  bottom: .5em;
+}
+
+/* サークルを作る */
+.h2--extend.-plus::before {
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: bold;
+  text-rendering: auto;
+  line-height: 1;
+  content: "\f055";
+  font-family: "Font Awesome 5 Free";
+  color: #f6993f;
+}
+
+.h5--18px {
+  color: rgba(0, 0, 0, 0.87);
+  font-size: 18px;
+  font-family: HiraKakuProN-W6;
+  line-height: 1.89;
+}
+
+.number-circle {
+  display: inline-block;
+  margin-right: 12px;
+  margin-left: -24px;
+  padding-top: 2px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: #2292a4;
+  color: #fff;
+  font-size: 14px;
+}
+
+.text-fw-bold {
+  font-family: HiraKakuProN-W6;
+}
+
+.mr-auto,
+.mx-auto {
+  margin-right: auto !important;
+}
 
 /* 下部固定メニュー */
-.bg-fixed-bottom {
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 100;
-  padding-top: .75rem;
-  padding-bottom: 1rem !important;
-  background-color: #ececec !important;
-}
 
-.container-fixed-bottom {
-  position: relative;
-  width: 100%;
-  padding-right: 10px;
-  padding-left: 10px;
-  margin-right: auto;
-  margin-left: auto;
-}
 
-.items-center-fixed-bottom {
-  align-items: center !important;
-  justify-content: space-between !important;
-  display: flex;
-  flex-wrap: wrap;
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
-  list-style-position: initial;
-  list-style-image: initial;
-  list-style-type: none;
-}
-
-.li {
-  display: list-item;
-  text-align: -webkit-match-parent;
-}
-
-.item-fixed-bottom {
-  /*padding-left: 1rem !important;
-  padding-right: 1rem !important;*/
-  position: relative !important;
-}
-
-.fas,
-.far {
+.fixed-bottom .fas,
+.fixed-bottom .far {
   display: inline-block;
   font-size: 27px;
   height: 33px;
@@ -11366,18 +11554,9 @@ a.text-dark:focus {
 
 
 
-.link-itmem-fixed-bottom {
-  /*transform: translate(-1.945, -2.004);*/
-  text-align: center;
-}
 
-.text-item-fixed-bttom {
-  display: block;
-  margin-top: 6px;
-  color: rgba(0, 0, 0, 0.24);
-  text-align: center;
-  font-size: 10px;
-}
+
+
 
 /* つなげーとについて */
 .h2--extend {
@@ -11385,6 +11564,107 @@ a.text-dark:focus {
   font-size: 1.125rem;
   font-family: HiraKakuProN-W6;
 }
+
+.h2--extend::before {
+  display: inline-block;
+  margin-right: .5rem;
+  width: 18.9px;
+  height: 18px;
+  background: url("/aseets2019/img/iconfinder_heart33_216488.svg") no-repeat;
+  background-size: contain;
+  content: '';
+  vertical-align: text-top;
+}
+
+/* line 133, app/assets/stylesheets/application2019/css/common.css */
+.h2--search {
+  margin-bottom: 24px;
+  font-size: 1.125rem;
+  font-family: HiraKakuProN-W6;
+}
+
+/* line 138, app/assets/stylesheets/application2019/css/common.css */
+.h2--search::before {
+  display: inline-block;
+  margin-right: .5rem;
+  margin-left: .5em;
+  width: 18.9px;
+  height: 18px;
+  background: url("/aseets2019/img/iconfinder_heart33_216488.svg") no-repeat;
+  background-size: contain;
+  content: '';
+  vertical-align: text-top;
+}
+
+/* line 149, app/assets/stylesheets/application2019/css/common.css */
+.h2--extend.-crown::before {
+  
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: bold;
+  text-rendering: auto;
+  line-height: 1;
+  content: "\f521";
+  font-family: "Font Awesome 5 Free";
+  color: #f6993f;
+}
+
+/* line 155, app/assets/stylesheets/application2019/css/common.css */
+.h2--extend.-new::before {
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: bold;
+  text-rendering: auto;
+  line-height: 1;
+  content: "\f09e";
+  font-family: "Font Awesome 5 Free";
+  color: #f6993f;
+}
+
+/* line 159, app/assets/stylesheets/application2019/css/common.css */
+.h2--extend.-event::before {
+  width: 15px;
+  background: url("/aseets2019/img/icon_event.svg") no-repeat;
+  background-size: contain;
+}
+
+/* line 164, app/assets/stylesheets/application2019/css/common.css */
+.h2--extend.-report::before {
+  background: url("/aseets2019/img/icon_report_blog.svg") no-repeat;
+  background-size: contain;
+}
+
+/* line 168, app/assets/stylesheets/application2019/css/common.css */
+.h2--extend.-plus::before {
+  background: url("/aseets2019/img/icon_plus.svg") no-repeat;
+  background-size: contain;
+}
+
+/* line 172, app/assets/stylesheets/application2019/css/common.css */
+.h2--extend.-app::before {
+  background: url("/aseets2019/img/icon_app.svg") no-repeat;
+  background-size: contain;
+}
+
+/* line 176, app/assets/stylesheets/application2019/css/common.css */
+.h2--extend.-member::before {
+  background: url("/aseets2019/img/icon_memer.svg") no-repeat;
+  background-size: contain;
+}
+
+/* line 180, app/assets/stylesheets/application2019/css/common.css */
+.h2--extend.-member2::before {
+  background: url("/aseets2019/img/icon-member2.svg") no-repeat;
+  background-size: contain;
+}
+
+/* line 185, app/assets/stylesheets/application2019/css/common.css */
+.h2--extend--noicon:before {
+  content: none;
+}
+
 /* フッターの下線 */
 li.nav-item:not(:last-child) {
   border-bottom: 1px solid #dee2e6 !important;
@@ -11392,3 +11672,24 @@ li.nav-item:not(:last-child) {
   border-bottom-style: solid !important;
   border-bottom-color: rgb(222, 226, 230) !important;
 }
+
+
+/* 新規登録画面 */
+
+.pb-4_5 {
+  padding-bottom: 2rem;
+}
+
+.pt-4_5 {
+  padding-top: 2rem;
+}
+
+.container-slim {
+  margin: 0 auto;
+  width: 70%;
+}
+
+.link--green {
+  color: #2292a4;
+}
+
