--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11771,3 +11771,62 @@ li.nav-item:not(:last-child) {
   color: #2292a4;
 }
 
+/* purofile作成画面 */
+.message-required {
+  padding: 1px 6px;
+  border-radius: .2rem;
+  background: #d84a05;
+  color: #fff;
+  font-size: 12px;
+}
+
+.mb-1_5 {
+  margin-bottom: .25rem !important;
+}
+
+.mb-2_5 {
+  margin-bottom: .75rem !important;
+}
+
+.mb-3_5 {
+  margin-bottom: 1.25rem;
+}
+
+.mb-4_25 {
+  margin-bottom: 2rem;
+}
+
+.mb-4_5 {
+  margin-bottom: 2.5rem;
+}
+
+.p-3_5 {
+  padding: 1.25rem !important;
+}
+
+.textarea--eventreport {
+  outline: none;
+  border: none;
+}
+
+.textarea--eventreport::-webkit-input-placeholder {
+  color: rgba(0, 0, 0, 0.24);
+}
+.textarea--eventreport::-moz-placeholder {
+  color: rgba(0, 0, 0, 0.24);
+}
+.textarea--eventreport:-ms-input-placeholder {
+  color: rgba(0, 0, 0, 0.24);
+}
+.textarea--eventreport::-ms-input-placeholder {
+  color: rgba(0, 0, 0, 0.24);
+}
+.textarea--eventreport::placeholder {
+  color: rgba(0, 0, 0, 0.24);
+}
+
+.fa-check,
+.fa-exclamation-triangle,
+.fa-question-circle {
+  font-weight: 400 !important;
+}
