--- a/public/css/app.css
+++ b/public/css/app.css
@@ -177,7 +177,7 @@ a {
 
 a:hover {
   color: #0056b3;
-  text-decoration: underline;
+  text-decoration: none;
   
 }
 
@@ -2722,6 +2722,14 @@ fieldset:disabled a.btn {
      object-fit: contain;
 }
 
+.btn-primary--grad--outline {
+  border: 1px solid #f09819;
+  background-color: #fff;
+  background-image: none;
+  color: #f09819;
+  font-family: HiraKakuProN-W6;
+}
+
 
 .btn-primary:hover {
   color: #fff;
@@ -5163,6 +5171,13 @@ card-img-overlay--black {
 .card-img-top {
   border-top-left-radius: calc(0.25rem - 1px);
   border-top-right-radius: calc(0.25rem - 1px);
+}
+
+.card-img-top {
+  -o-object-fit: cover;
+  object-fit: cover;
+  -o-object-position: center;
+  object-position: center;
 }
 
 .card-img,
@@ -12100,4 +12115,119 @@ li.nav-item:not(:last-child) {
   height: 72px;
   -o-object-fit: cover;
   object-fit: cover;
+}
+
+/*サークル作成画面*/
+.list-makecircle {
+  margin: 0 auto;
+  width: 75%;
+  list-style: none;
+  counter-reset: num-counter;
+}
+
+.list-makecircleitem {
+  position: relative;
+}
+
+.list-makecircleitem::before {
+  position: relative;
+  z-index: 2;
+  display: flex;
+  margin-right: auto;
+  margin-bottom: 8px;
+  margin-left: auto;
+  width: 34px;
+  height: 34px;
+  border-radius: 50%;
+  background-color: #fbfbfb;
+  color: rgba(0, 0, 0, 0.54);
+  content: counter(num-counter);
+  counter-increment: num-counter;
+  font-family: HiraKakuProN-W6;
+  align-items: center;
+  justify-content: center;
+}
+
+.list-makecircleitem.active {
+  color: #f09819;
+}
+
+.list-makecircleitem.active::before {
+  background-color: #f09819;
+  color: #fff;
+}
+
+.list-makecircleitem:not(:last-of-type) {
+  margin-right: 45px;
+  margin-left: -15px;
+}
+
+.list-makecircleitem:not(:last-of-type):after {
+  position: absolute;
+  top: 37%;
+  left: 76%;
+  display: block;
+  width: 90px;
+  height: 1px;
+  border-top: 1px solid rgba(0, 0, 0, 0.12);
+  content: '';
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.link--arrow {
+  position: relative;
+}
+
+.flex-column {
+  flex-direction: column !important;
+}
+
+a[aria-expanded=false] i:before {
+  -webkit-transform: rotate(0deg);
+  -ms-transform: rotate(0deg);
+  transform: rotate(0deg);
+  transition-duration: 0.01s;
+  color: #e0e0e0;
+}
+
+a[aria-expanded=true] i:before {
+  -webkit-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  transform: rotate(90deg);
+  transition-duration: 0.01s;
+  color: #e0e0e0;
+  font
+}
+
+a:not([href]):not([tabindex]) {
+  color: inherit;
+  text-decoration: none;
+}
+
+.min-vh-100 {
+  min-height: 100vh !important;
+}
+
+.w-20 {
+  width: 20%;
+}
+
+.w-40 {
+  width: 40%;
+}
+
+.custom-select--makecircle {
+  border: none;
+  background: url(/aseets2019/img/icon_arrow_bottom.svg) no-repeat right 0.75rem center/10px 20px;
+  background-color: #fff;
+  color: rgba(0, 0, 0, 0.24);
+}
+
+.btn-primary--grad.disabled, .btn-primary--grad:disabled {
+  opacity: 1;
+  background: #afafaf;
+  cursor: default;
 }
