--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11721,12 +11721,28 @@ ul.ib-list li {
   margin-right: .5rem;
   width: 18.9px;
   height: 18px;
-  background: url("/aseets2019/img/iconfinder_heart33_216488.svg") no-repeat;
   background-size: contain;
-  content: '';
+  content: '\f004';
   vertical-align: text-top;
+  font-family: "Font Awesome 5 Free";
+  color: #f6993f;
+  font-weight: bold;
+  text-rendering: auto;
 }
 
+.h2--extend.-event::before {
+  width: 13px;
+  background-size: contain;
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: bold;
+  text-rendering: auto;
+  line-height: 1;
+  content: "\f024";
+  font-family: "Font Awesome 5 Free";
+  color: #f6993f;
+}
 /* line 133, app/assets/stylesheets/application2019/css/common.css */
 .h2--search {
   margin-bottom: 24px;
@@ -11772,13 +11788,6 @@ ul.ib-list li {
   content: "\f09e";
   font-family: "Font Awesome 5 Free";
   color: #f6993f;
-}
-
-/* line 159, app/assets/stylesheets/application2019/css/common.css */
-.h2--extend.-event::before {
-  width: 15px;
-  background: url("/aseets2019/img/icon_event.svg") no-repeat;
-  background-size: contain;
 }
 
 /* line 164, app/assets/stylesheets/application2019/css/common.css */
@@ -12469,4 +12478,33 @@ table {
 }
 .grad-trigger.is-show + .grad-item::before {
   display: none;
+}
+
+.link--active {
+  color: #2292a4 !important;
+  font-family: HiraKakuProN-W6;
+}
+
+.search-shadow {
+  box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.1) !important;
+}
+
+.object-fit-cover {
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+
+.object-fit-cover {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+
+.list-link + .list-link::before {
+  display: inline-block;
+  margin-right: 13px;
+  margin-left: 13px;
+  color: rgba(0, 0, 0, 0.26);
+  content: '|';
 }
